market window functions